--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "dev": "nuxt-ts",
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
+    "shell": "npm run build && firebase functions:shell",
+    "serve": "npm run build && firebase emulators:start --only functions",
     "generate": "nuxt-ts generate",
+    "deploy": "firebase deploy --only functions",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "test": "jest"
+    "test": "jest",
+    "logs": "firebase functions:log"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "firebase-admin": "^9.2.0",
+    "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
@@ -32,6 +38,8 @@
     "eslint-plugin-vue": "^7.5.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "typescript": "^3.8.0",
+    "firebase-functions-test": "^0.2.0"
   }
 }
