--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@nuxt/typescript-runtime": "^2.0.1",
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "nuxt": "^2.14.12"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
@@ -36,10 +36,10 @@
     "eslint": "^7.18.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.5.0",
+    "firebase-functions-test": "^0.2.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
-    "vue-jest": "^3.0.4",
     "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "vue-jest": "^3.0.4"
   }
 }
