--- a/firebase.json
+++ b/firebase.json
@@ -4,5 +4,13 @@
   },
   "functions": {
     "predeploy": "npm --prefix functions run build"
+  },
+  "hosting": {
+    "public": "pages",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
