--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
     "@nuxtjs/axios": "^5.12.5",
+    "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
