--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,7 @@
     "predeploy": "npm --prefix functions run build"
   },
   "hosting": {
-    "public": "pages",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
